--- a/mongoDB.yaml
+++ b/mongoDB.yaml
@@ -1,18 +1,27 @@
-version: "3.8"
-
 services:
   mongo:
-    image: mongo
+    image: mongo:latest
+    container_name: mongo
+    restart: always
     ports:
-    - 27017:27017
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: qwerty
+    volumes:
+# for linux system 
+      # - ~/mongo-data:/data/db 
+# for win powershell
+      - C:\Users\Mohit\My Folder\volume_02:/data/db
 
   mongo-express:
-    image: mongo-express
+    image: mongo-express:latest
+    container_name: mongo-express
+    restart: always
+    depends_on:
+      - mongo
     ports:
-    - 8081:8081
+      - "8081:8081"
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: admin
       ME_CONFIG_MONGODB_ADMINPASSWORD: qwerty
